mpiCC to mpic++

--- a/sim/src/musik/Makefile
+++ b/sim/src/musik/Makefile
@@ -3,7 +3,8 @@
 #------------------------------------------------------------------------------
 
 #------------------------------------------------------------------------------
-CXX = mpiCC
+CXX = mpic++
+#CXX = mpiCC
 CFLAGS = -O3 -DMPI_AVAILABLE=1 -DNODEBUG=0 -DNOTRACING=1 -I. -I./libsynk
 
 #------------------------------------------------------------------------------
